--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 log = "0.4.17"
 custom-utils = "0.10.14"
-floem_reactive = {git = "https://github.com/lapce/floem.git", rev = "cb62f933c7866c576c542fa615040376d54eb48a"}
+floem_reactive = {git = "https://github.com/jm-observer/floem.git", branch = "main-private"}
 
 
-[patch."https://github.com/lapce/floem.git"]
-floem_reactive ={path = "../floem-fork/reactive"}
+#[patch."https://github.com/lapce/floem.git"]
+#floem_reactive ={path = "../floem-fork/reactive"}
